--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,13 +1,14 @@
 body{
+    background: #292A2A;
     text-align: center;
     font-family: "Arial";
-    color: red;
+    color: #333;
     font-size: 16px;
     margin: 0;
     padding: 0;
 }
 #container{
-    width: 40%;
+    width: 70%;
     padding: 0;
     text-align: left;
     border: 1px solid gray;
@@ -15,12 +16,17 @@ body{
 }
 
 #cabecera{
-    background: blue;
+    background: #33A;
     color: white;
     margin: 0;
     padding: 0.5em;
     font-weight: bold;
     box-shadow: 0px 2px 20px 0px rgba(0,0,0, 0.5);
+}
+#cabecera #logo{
+    width: 20px;
+    vertical-align: middle;
+    margin-right: 5px ;
 }
 
 #cabecera #tagline{
@@ -35,4 +41,8 @@ body{
 
 #container p{
     margin: 20px 0 20px 20px;
+}
+#post{
+    background: white;
+    padding: 1em;
 }
