--- a/css/estilos.css
+++ b/css/estilos.css
@@ -36,3 +36,9 @@ body{
 #container p{
     margin: 20px 0 20px 20px;
 }
+#footer{
+    background: gray;
+    color: white;
+    text-align: center;
+    padding: 10px;
+}
